--- a/workshop10-fr/workshop10-fr.Rmd
+++ b/workshop10-fr/workshop10-fr.Rmd
@@ -30,41 +30,28 @@ knitr::opts_chunk$set(
 options(repos=structure(c(CRAN="http://cran.r-project.org")))
 ```
 
-```{r, include = FALSE}
-if (!require(vegan)) install.packages("vegan")
-library(vegan)
-if (!require(MASS)) install.packages("MASS")
-library(MASS)
-if (!require(labdsv)) install.packages("labdsv")
-library(labdsv)
-if (!require(devtools)) install.packages("devtools")
-library(devtools)
+class: inverse, center, middle
 
-if (!suppressPackageStartupMessages(require(mvpart))) {
-  # file name
-  f = file.path(tempdir(), "mvpart")
-  # download package file
-  download.file('https://cran.r-project.org/src/contrib/Archive/mvpart/mvpart_1.6-2.tar.gz', destfile = f, method = 'curl')
-  # install from source
-  system(paste('R CMD INSTALL', f))
-}
-
-# Dependendies for MVPARTwrap
-if (!require(fBasics)) install.packages("fBasics")
-library(fBasics)
-
-if (!require(ade4)) install.packages("ade4")
-library(ade4)
-
-if (!suppressPackageStartupMessages(require(MVPARTwrap))) {
-  # file name
-  f = file.path(tempdir(), "MVPARTwrap")
-  # download package file
-  download.file('https://cran.r-project.org/src/contrib/Archive/MVPARTwrap/MVPARTwrap_0.1-9.2.tar.gz', destfile = f, method = 'curl')
-  # install from source
-  system(paste('R CMD INSTALL', f))
-}
+```{R install_pkgs, echo = FALSE, results = "asis"}
+cat(
+  qcbsRworkshops::first_slides(10, c('Hmisc', 'labdsv', 'MASS', 'vegan'),
+    lang = "fr")
+)
 ```
+
+---
+# Objectifs d'apprentissage
+
+##### Utiliser R pour faire des ordinations non-contraintes
+
+
+---
+class: inverse, center, middle
+
+# Introduction
+
+
+---
 
 # Introduction
 
@@ -335,7 +322,7 @@ summary(spe.rda, display = NULL)
 
 .center[ ![:scale 70%](images/RDAOutput.png)]
 
-* **Constrained Proportion**: variance de Y expliquée par X .alert[(73.41%)]  
+* **Constrained Proportion**: variance de Y expliquée par X .alert[(73.41%)]
 * **Unconstained Proportion**: variance in Y non expliquée par .alert[(26.59%)]
 
   <br>
@@ -452,23 +439,17 @@ ordiplot(spe.rda.signif,
 Les fonctions plot() et ordiplot() produisent des triplots rapidement et facilement, mais on peut aussi configurer les graphiques manuellement.
 
 ```{r, echo = FALSE}
-plot(spe.rda.signif, scaling=1, main="Triplot RDA - scaling 1", type="none", xlab=c("RDA1"), ylab=c("RDA2"), xlim=c(-1,1), ylim=c(-1,1))
-points(scores(spe.rda.signif, display="sites", choices=c(1,2), scaling=1),
-       pch=21, col="black", bg="steelblue", cex=1.2)
-points(scores(spe.rda.signif, display="species", choices=c(1,2), scaling=1),
-       pch=22, col="black", bg = "#FEC44F", cex=1.2)
-text(x = (scores(spe.rda.signif, display="species", choices=c(1), scaling=1)+0.09),
-     y = (scores(spe.rda.signif, display="species", choices=c(2), scaling=1)),
-     labels=rownames(scores(spe.rda.signif, display="species", scaling=1)),
-     col="black", cex=0.6)
-arrows(0,0,
-       scores(spe.rda.signif, display="bp", choices=c(1), scaling=1),
-       scores(spe.rda.signif, display="bp", choices=c(2), scaling=1),
-       col="#CC3311", lwd = 3)
-text(x = scores(spe.rda.signif, display="bp", choices=c(1), scaling=1)-0.1,
-     y = scores(spe.rda.signif, display="bp", choices=c(2), scaling=1)-0.03,
-     labels=rownames(scores(spe.rda.signif, display="bp", choices=c(2), scaling=1)),
-     col="#CC3311", cex=1, font = 2)
+perc <- round(100*(summary(spe.rda.signif)$cont$importance[2, 1:2]), 2)
+sc_si <- scores(spe.rda.signif, display="sites", choices=c(1,2), scaling=1)
+sc_sp <- scores(spe.rda.signif, display="species", choices=c(1,2), scaling=1)
+sc_bp <- scores(spe.rda.signif, display="bp", choices=c(1, 2), scaling=1)
+
+plot(spe.rda.signif, scaling=1, main="Triplot RDA - scaling 1", type="none", xlab=paste0("RDA1 (", perc[1], "%)"), ylab = paste0("RDA2 (", perc[2], "%)"), xlim=c(-1,1), ylim=c(-1,1))
+points(sc_si, pch=21, col="black", bg="steelblue", cex=1.2)
+points(sc_sp, pch=22, col="black", bg = "#f2bd33", cex=1.2)
+text(sc_sp, labels = rownames(sc_sp), col="black", cex=0.6)
+arrows(0,0, sc_bp[,1], sc_bp[,2], col="#f04f6c", lwd = 3)
+text(x = sc_bp[,1] -0.1, y = sc_bp[,2] - 0.03, labels=rownames(sc_bp), col="#f04f6c", cex=1, font = 2)
 ```
 
 Voir le wiki pour plus de détails!
@@ -964,6 +945,17 @@ Choisissez l'arbre selon les objectifs de ton étude. Généralement, on veut un
 * mais avec un nombre .comment[informatif] de groupes
 * Essentiellement: quel arbre répond à ta question?
 
+
+---
+# MRT dans R
+
+Dans ce qui suit, nous allons utiliser .alert[`mvpart` qui est archivé sur le CRAN]. Nous l'installons depuis GitHub avec le package remotes:
+
+```{R mvpart_install}
+remotes::install_github("cran/mvpart")
+```
+
+
 ---
 # MRT dans R
 
@@ -1098,9 +1090,19 @@ summary(doubs.mrt)
 ---
 # MRT dans R: Espèces discriminantes
 
-On peut aussi déterminer quels espèces contribuent le plus à la variance expliquée par chaque noeud (.alert[espèces discriminantes]), ou quels sites sont inclus dans chaque feuille (groupe).
+On peut aussi déterminer quels espèces contribuent le plus à la variance expliquée par chaque nœud (.alert[espèces discriminantes]), ou quels sites sont inclus dans chaque feuille (groupe).
 <br>
-Pour ceci, on peut utiliser la libraire .comment[MVPARTwrap]:
+Pour ceci, on peut utiliser la libraire **MVPARTwrap**
+
+.alert[MVPARTwrap est archivé, on utilise remotes pour l'installer depuis GitHub]
+
+```{R MVPARTwrap_install}
+remotes::install_github("cran/MVPARTwrap")
+```
+
+---
+# MRT dans R: Espèces discriminantes
+
 ```{r, results = 'hide'}
 library(MVPARTwrap)
 
