--- a/pres-fr/workshop10-pres-fr.Rmd
+++ b/pres-fr/workshop10-pres-fr.Rmd
@@ -55,8 +55,8 @@ lapply(list.of.packages, require, character.only = TRUE, quietly = TRUE)
 # À propos de cet atelier
 [![badge](https://img.shields.io/static/v1?style=for-the-badge&label=repo&message=dev&color=6f42c1&logo=github)](https://github.com/QCBSRworkshops/workshop10)
 [![badge](https://img.shields.io/static/v1?style=for-the-badge&label=wiki&message=10&logo=wikipedia)](https://wiki.qcbs.ca/r_atelier10)
-[![badge](https://img.shields.io/static/v1?style=for-the-badge&label=Diapos&message=10&color=red&logo=html5)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.html)
-[![badge](https://img.shields.io/static/v1?style=for-the-badge&label=Diapos&message=10&color=red&logo=adobe-acrobat-reader)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.pdf)
+[![badge](https://img.shields.io/static/v1?style=for-the-badge&label=diapos&message=10&color=red&logo=html5)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.html)
+[![badge](https://img.shields.io/static/v1?style=for-the-badge&label=diapos&message=10&color=red&logo=adobe-acrobat-reader)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.pdf)
 [![badge](https://img.shields.io/static/v1?style=for-the-badge&label=script&message=10&color=2a50b8&logo=r)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.R)
 
 ---
@@ -67,11 +67,15 @@ lapply(list.of.packages, require, character.only = TRUE, quietly = TRUE)
 * [labdsv](https://cran.r-project.org/package=labdsv)
 * [MASS](https://cran.r-project.org/package=MASS)
 * [vegan](https://cran.r-project.org/package=vegan)
-
+* [MVPARTwrap](https://cran.r-project.org/package=MVPARTwrap)
+* [mvpart](https://cran.r-project.org/package=mvpart)
 <br>
 
-```r
+```{r echo = TRUE, eval = FALSE}
 install.packages(c('Hmisc', 'labdsv', 'MASS', 'vegan'))
+
+remotes::install_github("cran/mvpart")
+remotes::install_github("cran/MVPARTwrap")
 ```
 
 ---
