--- a/pres-fr/workshop10-pres-fr.Rmd
+++ b/pres-fr/workshop10-pres-fr.Rmd
@@ -12,7 +12,6 @@ output:
     nature:
       beforeInit: "qcbsR-macros.js"
       highlightLines: true
-      highlightStyle: github
 ---
 
 ```{r setup, echo = FALSE}
@@ -53,30 +52,49 @@ lapply(list.of.packages, require, character.only = TRUE, quietly = TRUE)
 ```
 
 # À propos de cet atelier
-[![badge](https://img.shields.io/static/v1?style=for-the-badge&label=repo&message=dev&color=6f42c1&logo=github)](https://github.com/QCBSRworkshops/workshop10)
+[![badge](https://img.shields.io/static/v1?style=for-the-badge&label=development&message=10&color=6f42c1&logo=github)](https://github.com/QCBSRworkshops/workshop10)
 [![badge](https://img.shields.io/static/v1?style=for-the-badge&label=wiki&message=10&logo=wikipedia)](https://wiki.qcbs.ca/r_atelier10)
 [![badge](https://img.shields.io/static/v1?style=for-the-badge&label=diapos&message=10&color=red&logo=html5)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.html)
 [![badge](https://img.shields.io/static/v1?style=for-the-badge&label=diapos&message=10&color=red&logo=adobe-acrobat-reader)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.pdf)
 [![badge](https://img.shields.io/static/v1?style=for-the-badge&label=script&message=10&color=2a50b8&logo=r)](https://qcbsrworkshops.github.io/workshop10/workshop10-fr/workshop10-fr.R)
 
----
-
-# Packages requis
-
-* [Hmisc](https://cran.r-project.org/package=Hmisc)
-* [labdsv](https://cran.r-project.org/package=labdsv)
-* [MASS](https://cran.r-project.org/package=MASS)
-* [vegan](https://cran.r-project.org/package=vegan)
-* [MVPARTwrap](https://cran.r-project.org/package=MVPARTwrap)
-* [mvpart](https://cran.r-project.org/package=mvpart)
 <br>
 
+<br>
+
+<br>
+
+[![License: CC BY-SA 4.0](https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg)](https://creativecommons.org/licenses/by-sa/4.0/deed.fr)
+---
+
+# Préparation
+
+
+###### Logiciels: **R** et **RStudio Desktop**
+
+Pour suivre cet atelier, vous devez avoir installé la dernière version de [R](https://cloud.r-project.org/) et de [RStudio Desktop](https://rstudio.com/products/rstudio/download/#download) sur votre ordinateur.
+
+###### Libraries **R** réquises
+
+Nous allons besoin de ces paquets pendant cet atelier:
+
+1. [`Hmisc`](https://cran.r-project.org/package=Hmisc)
+2. [`labdsv`](https://cran.r-project.org/package=labdsv)
+3. [`MASS`](https://cran.r-project.org/package=MASS)
+4. [`vegan`](https://cran.r-project.org/package=vegan)
+5. [`MVPARTwrap`](https://cran.r-project.org/package=MVPARTwrap)
+6. [`mvpart`](https://cran.r-project.org/package=mvpart)
+
+
+Vous pouvez les installer en utilisant le code ci-dessous:
+.small[
 ```{r echo = TRUE, eval = FALSE}
 install.packages(c('Hmisc', 'labdsv', 'MASS', 'vegan'))
 
 remotes::install_github("cran/mvpart")
 remotes::install_github("cran/MVPARTwrap")
 ```
+]
 
 ---
 # Objectifs d'apprentissage
