--- a/pres-en/workshop10-pres-en.Rmd
+++ b/pres-en/workshop10-pres-en.Rmd
@@ -120,7 +120,6 @@ For this workshop, you will need:
   * DoubsEnv data
   * DoubsSpe data
   * DoubsSpa data
-  * Test data for linear discriminant analyses
 
 ---
 # Required packages
@@ -130,8 +129,6 @@ Please make sure you have downloaded, installed, and loaded these packages:
 * rdaTest package .alert[(from wiki)]
 * mvpart package .alert[(from wiki)]
 * MVPARTwrap package .alert[(from wiki)]
-* labdsv .small[(to identify indicator species in the MRT)]
-* MASS .small[(for LDA)]
 
 ---
 # Follow along!
@@ -929,9 +926,13 @@ plot(mite.part, digits = 2, cex = 1.5,
 ---
 class: inverse, center, middle
 
+exclude: true 
+
 # Multivariate regression tree (MRT)
 
 ---
+exclude: true 
+
 # Multivariate regression tree (MRT)
 
 .center[![:scale 75%](images/MRT.png)]
@@ -940,6 +941,8 @@ MRT is a constrained clustering technique.
 * Splits a response matrix (Y) into clusters based on thresholds of explanatory variables (X)
 
 ---
+exclude: true 
+
 # Multivariate regression tree (MRT)
 
 .center[![:scale 75%](images/MRT.png)]
@@ -950,6 +953,8 @@ An MRT consists of:
 * .alert[Leaf]: terminal group of sites
 
 ---
+exclude: true 
+
 # Multivariate regression tree (MRT)
 
 MRT has many advantages:
@@ -960,6 +965,8 @@ MRT has many advantages:
 * Can handle raw explanatory variables
 
 ---
+exclude: true 
+
 # MRT: Tree selection
 
 When you run an MRT, 2 things happen:
@@ -973,6 +980,8 @@ The "best" tree varies depending on your study goals. Usually you want a tree:
 * Basically: what makes sense for your question?
 
 ---
+exclude: true 
+
 # MRT in R
 
 In what follows we will be using .alert[`mvpart` that is currently archived on CRAN]. We install it from GitHub using the package remotes:
@@ -983,6 +992,8 @@ library(mvpart)
 ```
 
 ---
+exclude: true 
+
 # MRT in R
 
 ```{r, results = 'hide', fig.show = 'hide', eval = F}
@@ -1000,6 +1011,8 @@ doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
 ```
 
 ---
+exclude: true 
+
 # MRT in R: Tree selection
 
 ```{r, echo = FALSE, results = 'hide', fig.height = 5, fig.width = 5.5, fig.align = 'center'}
@@ -1018,6 +1031,8 @@ doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
 * Lime green bars: # of times each tree size was chosen
 ]
 ---
+exclude: true 
+
 # MRT in R: Tree selection
 
 ```{r, echo = FALSE, results = 'hide', fig.height = 5, fig.width = 5.5, fig.align = 'center', eval =F}
@@ -1036,6 +1051,8 @@ doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
 ]
 
 ---
+exclude: true 
+
 # MRT in R: Tree plot
 
 ```{r, echo = FALSE, results = 'hide', fig.height = 5.5, fig.width = 5.5}
@@ -1053,6 +1070,8 @@ doubs.mrt <- mvpart(as.matrix(spe.hel) ~ ., data = env,
 * Residual error = 0.563, which means the model's R2 is .alert[43.7%]
 ]
 ---
+exclude: true 
+
 # MRT in R: Comparing trees
 
 We can also compare solutions, to help us chose the best tree.
@@ -1071,6 +1090,8 @@ mvpart(as.matrix(spe.hel) ~ ., data = env,
 * Higher explanatory power, .alert[BUT] predictive power (CV Error = 0.671) is basically the same as the previous solution (CV Error = 0.673).
 ]
 ---
+exclude: true 
+
 # MRT in R: Comparing trees
 
 Let's look at a solution with fewer (4) groups!
@@ -1089,6 +1110,8 @@ mvpart(as.matrix(spe.hel) ~ ., data = env,
 * .alert[Higher predictive power] than both previous solutions (CV Error)
 ]
 ---
+exclude: true 
+
 # MRT in R: Complexity parameter
 
 To find out how much variance is explained by each node in the tree, we need to look at the complexity parameter (CP).
@@ -1100,6 +1123,8 @@ doubs.mrt$cptable
 * CP at subsequent nodes = R2 of each node (see full summary to see which node corresponds to which variable threshold)
 
 ---
+exclude: true 
+
 # MRT in R: Summary output
 
 We can access more information about the tree (such as which node corresponds to which variable threshold):
@@ -1110,6 +1135,8 @@ summary(doubs.mrt)
 ]
 
 ---
+exclude: true 
+
 # MRT in R: Discriminant species
 
 You might also want to know which species are contributing most to the explained variance at each split (i.e. .alert[discriminant species]), or which sites are included within each leaf (group).
@@ -1125,6 +1152,8 @@ library(MVPARTwrap)
 ```
 
 ---
+exclude: true 
+
 # MRT in R: Discriminant species
 
 ```{r, results = 'hide'}
@@ -1136,6 +1165,8 @@ summary(doubs.mrt.wrap)
 ```
 
 ---
+exclude: true 
+
 # MRT in R: Discriminant species
 
 To see each species' contribution to explained variance at each node:
@@ -1147,6 +1178,8 @@ summary(doubs.mrt.wrap)
 
 
 ---
+exclude: true 
+
 # MRT in R: Indicator species
 
 You might also be interested in finding out which species are significant .alert[indicator species] for each grouping of sites.
@@ -1169,6 +1202,8 @@ doubs.mrt.indval$indcls[which(doubs.mrt.indval$pval <= 0.05)]
 TRU has the highest indicator value (0.867) overall, and is an indicator species for the first (alt >= 361.5) leaf of the tree.
 
 ---
+exclude: true 
+
 # Challenge 4 ![:cube]()
 .small[
 Create a multivariate regression tree for the mite data.
@@ -1193,6 +1228,8 @@ summary()
 ```
 ]
 ---
+exclude: true 
+
 # Challenge 4: Solution
 
 Step 1: Create the multivariate regression tree
@@ -1206,6 +1243,8 @@ mite.mrt <- mvpart(as.matrix(mite.spe.hel) ~ ., data = mite.env,
 ```
 
 ---
+exclude: true 
+
 # Challenge 4: Solution
 
 ```{r, echo = FALSE, results = 'hide', fig.height = 5, fig.width = 5}
@@ -1224,6 +1263,8 @@ mite.mrt <- mvpart(as.matrix(mite.spe.hel) ~ ., data = mite.env,
   * 2 leaves
 ]
 ---
+exclude: true 
+
 # Challenge 4: Solution
 
 
@@ -1239,6 +1280,8 @@ summary(mite.mrt.wrap)
 ```
 
 ---
+exclude: true 
+
 # Challenge 4: Solution
 
 What are the top 3 discriminant species .alert[for node 1]?
@@ -1246,10 +1289,14 @@ What are the top 3 discriminant species .alert[for node 1]?
 
 .center[![:scale 40%](images/Challenge4_IndVal.png)]
 ---
+exclude: true 
+
 class: inverse, center, middle
 
 # Linear discriminant analysis (LDA)
 ---
+exclude: true 
+
 # Linear discriminant analysis (LDA)
 
 * Determine how well your descriptor variables explain an *a priori* grouping of your response variable
@@ -1259,6 +1306,8 @@ class: inverse, center, middle
 
 .center[![:scale 60%](images/LDA_FishExample.jpg)]
 ---
+exclude: true 
+
 # LDA in R: Doubs fish dataset
 
 We know that environmental variables generally change with latitude.
@@ -1269,6 +1318,8 @@ We know that environmental variables generally change with latitude.
 * We can use an LDA to answer this question.
 
 ---
+exclude: true 
+
 # LDA in R: Doubs fish dataset
 
 Let's begin by loading spatial coordinates for the Doubs sites:
@@ -1291,6 +1342,8 @@ spa$group[which(spa$y > 156)] <- 3
 ```
 
 ---
+exclude: true 
+
 # LDA in R: Latitude groups
 
 Let's quickly plot the latitude groupings to see if they make sense:
@@ -1299,6 +1352,8 @@ plot(spa$x, spa$y, col = spa$group, pch = 16, cex = 1.5)
 ```
 
 ---
+exclude: true 
+
 # LDA in R
 
 .alert[Note]: Usually we would check the multivariate homogeneity of within-group variances before proceeding (see Borcard et al. 2011).
@@ -1313,6 +1368,8 @@ LDA <- lda(env, spa$group)
 ```
 
 ---
+exclude: true 
+
 # LDA in R: Grouping accuracy
 
 .small[We can then determine how sites were grouped, and whether this grouping is accurate.
@@ -1334,6 +1391,8 @@ diag(prop.table(spe.table, 1))
 All sites were correctly classified into the latitude groups based on environmental variables.]
 
 ---
+exclude: true 
+
 # LDA in R: Predictions
 
 We can now use this relationship to .comment[classify new sites into latitude groups].
@@ -1355,6 +1414,8 @@ predict.group$class
 ```
 ]
 ---
+exclude: true 
+
 # Challenge 5 ![:cube]()
 
 .small[Create 4 latitude groups in the .comment[mite.xy] dataset. Then, run an LDA to classify mite sites into latitude groupings based on environmental variables (.comment[SubsDens] and .comment[WatrCont]).
@@ -1376,6 +1437,8 @@ diag()
 ]
 
 ---
+exclude: true 
+
 # Challenge 5: Solution
 
 Step 1: Create 4 latitude groups
@@ -1404,6 +1467,8 @@ LDA.mite <- lda(mite.env[,1:2], mite.xy$group)
 ```
 ]
 ---
+exclude: true 
+
 # Challenge 5: Solution
 
 Step 3: Check whether the groupings are correct
