move removed methods into comments section

--- a/pres-en/workshop10-pres-en.Rmd
+++ b/pres-en/workshop10-pres-en.Rmd
@@ -106,8 +106,12 @@ In this workshop, we will focus instead on .alert[**constrained**] analyses:
 * Variation partitioning
 
 
-
 These analyses allow us to .alert[**describe**] and .alert[**predict**] relationships between community composition data and environmental variables. (This means we can .alert[**test hypotheses**]!)
+
+???
+Other methods that were excluded for 3 hour workshop format, but are in the book
+Multivariate regression tree (MRT)
+Linear discriminant analysis (LDA)
 
 ---
 # Download today's script and data
